--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       name="description"
       content="Grade Scaler - THE exam grading calculation app"
     />
+    <meta
+      property="og:image"
+      content="https://og.maxschmitt.me/Writing%20a%20static%20site%20generator%20with%20MDX%20%26%20Webpack.png"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
