--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:image"
-      content="https://quickchart.io/chart?c={type:'bar',data:{labels:['Q1','Q2','Q3','Q4'], datasets:[{label:'Users',data:[50,60,70,180]},{label:'Revenue',data:[100,200,300,400]}]}}"
+      content="https://quickchart.io/chart?c=%7Btype:'bar',data:%7Blabels:%5B'Q1','Q2','Q3','Q4'%5D,%20datasets:%5B%7Blabel:'Users',data:%5B50,60,70,180%5D%7D,%7Blabel:'Revenue',data:%5B100,200,300,400%5D%7D%5D%7D%7D"
   />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
