--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:image"
-      content="https://quickchart.io/chart?c=%7Btype:'bar',data:%7Blabels:%5B'Q1','Q2','Q3','Q4'%5D,%20datasets:%5B%7Blabel:'Users',data:%5B50,60,70,180%5D%7D,%7Blabel:'Revenue',data:%5B100,200,300,400%5D%7D%5D%7D%7D"
+      content="https://quickchart.io/chart?bkg=white&c=%7B%0A%20%20type%3A%20%27bar%27%2C%0A%20%20data%3A%20%7B%0A%20%20%20%20labels%3A%20%5B%27Week%201%27%2C%20%27Week%202%27%2C%20%27Week%203%27%2C%20%27Week%204%27%5D%2C%0A%20%20%20%20datasets%3A%20%5B%7B%0A%20%20%20%20%20%20label%3A%20%27Retweets%27%2C%0A%20%20%20%20%20%20data%3A%20%5B12%2C%205%2C%2040%2C%205%5D%0A%20%20%20%20%7D%2C%20%7B%0A%20%20%20%20%20%20label%3A%20%27Likes%27%2C%0A%20%20%20%20%20%20data%3A%20%5B80%2C%2042%2C%20215%2C%2030%5D%0A%20%20%20%20%7D%5D%0A%20%20%7D%0A%7D"
   />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
