--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Grade Scaler</title>
+    <meta property="og:image" content="https://www.google.de/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
